...

    private val allRoutes = MutableStateFlow<List<BusRoute>>(emptyList())

    init {
        val sampleRoutes = listOf(
            BusRoute(
                id = "102",
                routeNumber = "102",
                name = "Автобус №102",
                description = "Маршрут Славгород — Яровое",
                travelTime = "~40 минут",
                pricePrimary = "38₽ город / 55₽ межгород",
                paymentMethods = "Нал. / Безнал."
            )
            // Другие маршруты...
...
